--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,27 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+#main {
+  margin: 0 auto;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#main h1 {
+  text-align: center;
+}
+
+#input {
+  text-align: center;
+}
+
+#ul {
+  padding: 0;
+  width: 400px;
+  margin: 0 auto;
+  list-style: none;
+}
+
+#li {
+  width: 400px;
+  padding: 5px;
+}
+
+#li .button {
+  float: right;
 }
